2002-04-09  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03167] xface2xbm -> xface2xpm (current imlib can't handle XBM)
	* configure: s/XFACE2XBM/XFACE2XPM/
	* config.h.dist: ditto
	* file.c (xface2xpm): renamed from xface2xbm
			modified for xpm
		(readHeader): s/xface2xbm/xface2xpm/
	* scripts/Makefile (LIB_TARGETS): s/xface2xbm/xface2xpm/
	* scripts/xface2xpm.in: added

2002-03-30  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03162] Re: "ttp:" is marked instead of "http:" by MARL_URL
	* main.c (chkURLBuffer): "mailto" removed when USE_W3MMAILER
		in this case, chkExternalURIBuffer() will mark mailto: URL.

2002-03-30  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03160] Re: "ttp:" is marked instead of "http:" by MARL_URL
	* NEWS: mark_all_pages
	* anchor.c (reAnchorAny): check MarkAllPages
	* fm.h (MarkAllPages): added
	* rc.c (CMT_MARK_ALL_PAGES): added
		(mark_all_pages): added

2002-03-30  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03159] "ttp:" is marked instead of "http:" by MARL_URL
	* main.c (chkURLBuffer): check internal URLs first

2002-03-28  Fumitoshi UKAI  <ukai@debian.or.jp>

	* terms.c (set_tty): s/term_info/w3m_term_info/g;
		struct term_info is defined in FreeBSD's sys/consio.h
		reported by KOIE Hidetaka <hide@koie.org>

2002-03-28  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03146] Re: header option
	* main.c (make_optional_header_string): cleanups

2002-03-28  Yuuichi Teranishi <teranisi@gohome.org>

	* [w3m-dev 03145] header option
	* main.c (MAIN): hide args for security

2002-03-23  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 03140] Forward: Bug#139305: 
	   w3m: EXTERN_LINK does not work if href ends with ampersand
	* main.c (invoke_browser): check bg by browser

2002-03-21  Fumitoshi UKAI  <ukai@debian.or.jp>

	* terms.c (term_title): use ttyf instead of stderr

2002-03-20  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03137] Re: w3mman.1
	* XMakefile (MAN1): added